@@ -5,5 +5,6 @@ require_once 'lib/object.php';
 require_once 'lib/enumerable.php';
 require_once 'lib/array.php';
 require_once 'lib/hash.php';
+require_once 'lib/struct.php';
 
 ?>
